Optimized the home page

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -40,6 +40,10 @@
     "developerOptions": {
         "account": {
             "useDebugAccounts": false
+        },
+        "application": {
+            "enableDevtoolsHotkey": false,
+            "devtoolsOnLaunched": false
         }
     }
 }
