--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "electron-builder": "^25.1.8",
         "express": "^4.21.2",
         "typescript": "~5.7.2",
+        "uuid": "^11.1.0",
         "vite": "^6.3.5",
         "vue-tsc": "^2.2.0"
     }
