chore: Update packages
Update packages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "arcanummusic",
     "author": {
-        "name": "NekoZX",
+        "name": "NekoZX123",
         "email": "guess@whoiam.qwq",
         "url": "https://github.com/NekoZX123"
     },
