Improve package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "email": "guess@whoiam.qwq",
         "url": "https://github.com/NekoZX123"
     },
-    "description": "Arcanum Music - a multi-platform music application made by NekoZX",
+    "description": "Arcanum Music - a multi-platform music application made by NekoZX123",
     "private": true,
     "version": "1.0.20",
     "type": "module",
