feat: :bookmark: Release: v1.0.21 (Kosmos Internal)
The specified user avatar & name (local) are available in the Settings Page now

Release: the 1.0.21 version (Kosmos internal) of the application has been done~ You can download & install it from the releases page

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -28,7 +28,7 @@
     "user": {
         "localInfo": {
             "user": {
-                "avatarLink": "/public/images/library/defaultAvatar.png",
+                "avatarLink": "./images/library/defaultAvatar.svg",
                 "userName": "User"
             },
             "greetings": {
