feat(Local proxy): :zap: Establish another port for the local proxy in the dev environment
In the dev environment, the local proxy port is changed to 3001 now from the 3000 port previously. Now the dev version can be run despite the built versions that has been running

BREAKING CHANGE: In the dev environment, before using `proxyReuqest(...)` to send a request, `loadProxyPort` must be called to ensure the proxy port is set correctly

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "email": "guess@whoiam.qwq",
         "url": "https://github.com/NekoZX123"
     },
-    "description": "Arcanum Music - a multi-platform music application made by NekoZX123",
+    "description": "Arcanum Music",
     "private": true,
     "version": "1.0.21",
     "type": "module",
