--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "url": "https://github.com/NekoZX123"
     },
     "description": "Arcanum Music",
+    "homepage": "https://github.com/NekoZX123/ArcanumMusic",
+    "license": "Apache-2.0",
     "private": true,
     "version": "1.1.8",
     "type": "module",
@@ -19,14 +21,14 @@
         "electron:build": "npm run build && electron-builder build --config electron-builder.json"
     },
     "dependencies": {
-        "vue": "^3.5.13",
-        "express": "^4.21.2",
-        "node-fetch": "^3.3.2",
-        "cors": "^2.8.5",
         "axios": "^1.7.9",
+        "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
         "cryptojs": "^2.5.3",
+        "express": "^4.21.2",
+        "node-fetch": "^3.3.2",
         "uuid": "^11.1.0",
+        "vue": "^3.5.13",
         "websocket": "^1.0.35",
         "ws": "^8.18.3"
     },
@@ -43,7 +45,7 @@
         "crypto": "^1.0.1",
         "crypto-js": "^4.2.0",
         "cryptojs": "^2.5.3",
-        "electron": "^35.7.5",
+        "electron": "^38.2.1",
         "electron-builder": "^25.1.8",
         "express": "^4.21.2",
         "node-fetch": "^3.3.2",
