feat(Electron window): :sparkles: 增加了窗口隐藏至托盘功能
窗口关闭时, 应用可根据用户设置隐藏至系统托盘

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -4,6 +4,9 @@
             "start": {
                 "startOnBoot": false,
                 "startMinimized": false
+            },
+            "closeOptions": {
+                "hideToTray": true
             }
         },
         "appearance": {
