feat(Settings page): :zap: 调整了部分设置内容
去除了暂时无用处的 `使用调试账户信息` 设置, 并调整了部分设置界面的文字

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -31,7 +31,7 @@
         "localInfo": {
             "user": {
                 "avatarLink": "./images/library/defaultAvatar.svg",
-                "userName": "User"
+                "userName": "默认用户"
             },
             "greetings": {
                 "useGreetings": true,
@@ -40,9 +40,6 @@
         }
     },
     "developerOptions": {
-        "account": {
-            "useDebugAccounts": false
-        },
         "application": {
             "enableDevtoolsHotkey": false,
             "devtoolsOnLaunched": false
